--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,95 +2,46 @@ name: AkatsukiFE
 
 on:
   push:
-    branches: [main, develop]
-  pull_request:
-    branches: [main, develop]
+    branches:
+      - main
+      - develop
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_DEFAULT_REGION: ap-northeast-2
-
     steps:
-      - name: Checkout source code
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
 
       - name: Install dependencies
-        run: npm install --retry-on-fail
+        run: npm install
 
-      - name: Build the project
-        env:
-          VITE_APP_BACKEND_URL: ${{ secrets.BACKEND_URL }}
+      - name: Build
         run: npm run build
 
-      - name: Generate deployment package
-        run: |
-          mkdir -p deploy/.platform deploy/dist
-          cp -r dist/* deploy/dist
-          cp vite.config.js package.json Procfile server.js deploy/
-          cp -r .ebextensions .platform deploy/
-          cd deploy && zip -r ../deploy.zip .
+      - name: Zip Artifacts
+        run: zip -r deploy.zip dist
 
-      - name: Upload build artifacts to S3
-        run: aws s3 cp deploy.zip s3://elasticbeanstalk-ap-northeast-2-730335325274/deploy/deploy-${{ github.run_number }}-${{ github.sha }}.zip
+      - name: Upload to S3
+        run: aws s3 cp deploy.zip s3://mybucket/path/${{ github.run_id }}.zip
 
-      - name: Deploy to AWS Elastic Beanstalk
+      - name: Deploy to Elastic Beanstalk
+        id: deploy
         uses: einaregilsson/beanstalk-deploy@v22
         with:
-          aws_access_key: $AWS_ACCESS_KEY_ID
-          aws_secret_key: $AWS_SECRET_ACCESS_KEY
-          application_name: AkatsukiFE
-          environment_name: AkatsukiFE-env
-          version_label: deploy-${{ github.run_number }}-${{ github.sha }}
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           region: ap-northeast-2
+          application_name: AkatsukiFE
+          environment_name: ${{ github.head_ref }}-${{ github.run_number }}
+          version_label: ${{ github.sha }}
           deployment_package: deploy.zip
-          use_existing_version_if_available: true
-          wait_for_environment_recovery: 300
 
-      - name: Check deployment status
-        run: |
-          STATUS=$(aws elasticbeanstalk describe-environments --environment-names AkatsukiFE-env --query 'Environments[0].Health' --output text)
-          if [ "$STATUS" != "Green" ]; then
-            echo "Deployment failed. Environment health is $STATUS."
-            exit 1
-          else
-            echo "Deployment succeeded. Environment health is $STATUS."
-
-      - name: Retrieve EB Engine Log
-        if: failure()
-        run: |
-          INSTANCE_ID=$(aws elasticbeanstalk describe-environment-resources --environment-name AkatsukiFE-env --query 'EnvironmentResources.Instances[0].Id' --output text)
-          COMMAND_ID=$(aws ssm send-command --document-name "AWS-RunShellScript" --targets "Key=InstanceIds,Values=$INSTANCE_ID" --parameters 'commands=["sudo cat /var/log/eb-engine.log"]' --query 'Command.CommandId' --output text)
-          sleep 10
-          aws ssm get-command-invocation --command-id $COMMAND_ID --instance-id $INSTANCE_ID --query 'StandardOutputContent' --output text
-
-  check-comments:
-    runs-on: ubuntu-latest
-    needs: build-and-deploy
-    if: github.event_name == 'pull_request'
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Install GitHub CLI
-        run: sudo apt-get update && sudo apt-get install -y gh jq
-
-      - name: Check Pull Request Comments
-        id: pr-comments
-        run: |
-          PR_NUMBER=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
-          COMMENTS=$(gh pr view $PR_NUMBER --json comments --jq '.comments')
-          UNIQUE_USERS=$(echo "$COMMENTS" | jq -r 'map(.author.login) | unique | length')
-          if [ $UNIQUE_USERS -lt 2 ]; then
-            echo "Not enough unique users ($UNIQUE_USERS) in the pull request comments. At least 2 unique users are required."
-            exit 1
-          else
-            echo "Sufficient unique users ($UNIQUE_USERS) in the pull request comments."
+      - name: Swap CNAME
+        if: success()
+        run: aws elasticbeanstalk swap-environment-cnames --source-environment-name ${{ github.head_ref }}-${{ github.run_number }} --destination-environment-name AkatsukiFE-env
