--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,28 +28,19 @@ jobs:
         run: zip -r deploy.zip dist
 
       - name: Upload to S3
-        run: aws s3 cp deploy.zip s3://elasticbeanstalk-ap-northeast-2-730335325274/deploy/${{ github.run_id }}.zip
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: ap-northeast-2
+        run: aws s3 cp deploy.zip s3://elasticbeanstalk-ap-northeast-2-730335325274/${{ github.run_id }}.zip
 
       - name: Deploy to Elastic Beanstalk
-        id: deploy
         uses: einaregilsson/beanstalk-deploy@v22
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           region: ap-northeast-2
           application_name: AkatsukiFE
-          environment_name: ${{ github.head_ref }}-${{ github.run_number }}
+          environment_name: AkatsukiFE-env
           version_label: ${{ github.sha }}
           deployment_package: deploy.zip
 
       - name: Swap CNAME
         if: success()
         run: aws elasticbeanstalk swap-environment-cnames --source-environment-name ${{ github.head_ref }}-${{ github.run_number }} --destination-environment-name AkatsukiFE-env
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: ap-northeast-2
